kubernetes/base/flasher/keycloak/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
        - name: realm-import-volume
          configMap:
            name: realm-import-config
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - image: keycloak
          name: keycloak
          volumeMounts:
            - name: realm-import-volume
              mountPath: /tmp/import
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /auth/realms/master
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 10
