kubernetes/base/flasher/keycloak/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
    service: keycloak
spec:
  ports:
    - name: http-keycloak
      port: 8080
      protocol: TCP
  selector:
    app: keycloak
