kubernetes/base/flasher/keycloak/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak-virtualservice
spec:
  hosts:
    - "accounts.jkanda.fr"
  gateways:
    - flasher-gateway
    - mesh
  http:
    - route:
        - destination:
            host: keycloak
            port:
              number: 8080
